test/compile-fail/resolution/use/self/expected.txt
error[E0429]: `self` imports are only allowed within a braced list
  ┌─ ./test/compile-fail/resolution/use/self/top.rhdl:2:9
  │
2 │     use self;
  │         ^^^^ surround this with curly braces

